{{$NEXT}}

1.302026  2015-11-09 14:34:30-08:00 America/Los_Angeles

    - No functional changes since the last trial
    - Doc fix (fixes #52)
    - Doc fix (fixes #55)
    - Doc fix in Classic bundle
    - Doc fixes for FromTestBuilder

1.302025  2015-11-06 16:33:06-08:00 America/Los_Angeles (TRIAL RELEASE)

    - Add back cmp_ok in Core plugin
    - Add Classic plugin for legacy is/like/is_deeply/etc
    - Make docs recommend people moving from Test::More use -Classic

1.302024  2015-11-04 11:15:14-08:00 America/Los_Angeles

    - Add missing undef compare test

1.302023  2015-11-04 00:12:49-08:00 America/Los_Angeles (TRIAL RELEASE)

    - String and Number comparisons no longer allow undef (backwords incompatible change, sorry)
    - Doc spelling fixes (Evan Zacks)
    - Add Undef type in deep check
    - Fix docs for buffered subtests (Noticed by Magnolia.K)

1.302022  2015-11-03 09:43:39-08:00 America/Los_Angeles

    - Change Delta.pm to use a grep instead of a map (minor change)
    - Fix scalar-ref comparison for overloaded scalar refs (#50)

1.302021  2015-10-31 08:15:22-07:00 America/Los_Angeles

    - Remove all number vs string guessing
    - Doc fixes (thanks Magnolia.K)
    - Add details to test report

1.302020  2015-10-29 08:02:25-07:00 America/Los_Angeles

    - No changes, just removing trial

1.302019  2015-10-28 22:32:06-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Declare Test::Stream experimental phase complete
    - Updated Readme
    - Add tooling manual page
    - Better Trace::Mask behavior
    - Added Components manual page
    - Remove or modify experimental notice
    - Remove stray debugging statements
    - Slight change in module list in t/00-report.t

1.302018  2015-10-26 16:47:45-07:00 America/Los_Angeles

    - Better stack traces in spec
    - Remove duplicate module from the report
    - Rename subs in try {} and protect {}
    - Fix loop in SkipWithout
    - Fix Typo in Context pod
