@@ -50,7 +50,7 @@ Sub::Util = 1.40
 Term::ReadKey = 2.03
 Unicode::GCString = 2013.10
 Unicode::LineBreak = 2015.07.16
-Trace::Mask = 0.000005
+Trace::Mask = 0.000007
 
 [MakeMaker]
 [CPANFile]
