@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Update for upcoming Trace::Mask
+
 1.302026  2015-11-09 14:34:30-08:00 America/Los_Angeles
 
     - No functional changes since the last trial
